# DocScope

./: .gitignore  README.md  requirements.txt  run.sh  setup.cfg  tox.ini
docscope/: RAG.py  app.py  database.py  llm.py  plotter.py  prompt.py  schema.py  utils.py
docscope/tests/: test_basic_app.py  test_database.py  test_utils.py
