[metadata]
name= DocScope
version=1.0
author= Yaswanth Pulavarthi
description= Ingest the files and perform analytics integrated with Local LLMs
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Framework :: Streamlit
    Programming Language :: Python :: 3

[options]
packages=docscope
